app/scss/style.css
html {
  font-size: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  overflow-x: hidden;
}

*,
*::before,
*::after {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
  line-height: 1.3;
  font-family: "Be Vietnam Pro", sans-serif;
  font-size: 1.125rem;
  font-weight: 300;
  overflow-x: hidden;
}

body.noscroll {
  overflow: hidden;
}

@media (min-width: 64em) {
  body {
    font-size: 1rem;
  }
}

a,
a:visited,
a:hover {
  text-decoration: none;
}

.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.flex-jc-sb {
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.flex-jc-c {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.flex-ai-c {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.container {
  max-width: 70rem;
  margin: 0 auto;
}

.container--pall {
  padding-top: 2.25rem;
  padding-bottom: 2.25rem;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
}

.container--py {
  padding-top: 2.25rem;
  padding-bottom: 2.25rem;
}

.container--px {
  padding-right: 1.5rem;
  padding-left: 1.5rem;
}

.container--pt {
  padding-top: 2.25rem;
}

.container--pr {
  padding-right: 1.5rem;
}

.container--pb {
  padding-bottom: 2.25rem;
}

.container--pl {
  padding-left: 1.5rem;
}

.button,
button {
  padding: 0.875rem 2.1875rem;
  border-radius: 50px;
  cursor: pointer;
  color: #4053e4;
  font-weight: 400;
}

h1,
h2,
h3 {
  margin-top: 0px;
}

h1 {
  font-size: 2.31rem;
  font-weight: 700;
  line-height: 1.15;
  margin-bottom: 1.5rem;
}

@media (min-width: 64em) {
  h1 {
    font-size: 3.25rem;
  }
}

h2 {
  font-size: 1.875rem;
  margin-top: 2.25rem;
  margin-bottom: 2.25rem;
  font-weight: 700;
  line-height: 1.15;
}

@media (min-width: 64em) {
  h2 {
    font-size: 2.25rem;
    margin-top: 1.5625rem;
    margin-bottom: 1.5625rem;
  }
}

h4 {
  font-size: 1.125rem;
  margin-bottom: 1.125rem;
  font-weight: 400;
  line-height: 1.15;
}

@media (min-width: 64em) {
  h4 {
    font-size: 1.25rem;
    margin-bottom: 1.125rem;
  }
}

h5 {
  font-size: 1rem;
  margin-bottom: 2.25rem;
  font-weight: 400;
  line-height: 1.75;
}

@media (min-width: 64em) {
  h5 {
    font-size: 1rem;
    margin-bottom: 1.5625rem;
  }
}

p {
  line-height: 1.5;
  margin-bottom: 2.25rem;
  font-weight: 400;
}

@media (max-width: 63.9375em) {
  .hide-for-mobile {
    display: none;
  }
}

@media (min-width: 64em) {
  .hide-for-desktop {
    display: none;
  }
}

.bg {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow-x: hidden;
}

.feedback {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background-color: #f6f6f6;
  /* demo styles */
}

.feedback .accordion {
  background-color: white;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: left;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.feedback .active,
.feedback .accordion:hover {
  background-color: #4053e4;
  color: white;
}

.feedback .panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

.feedback h2 {
  text-align: right;
  color: #4053e4;
}

.feedback h3 {
  margin-bottom: 0px;
}

.feedback table {
  width: 100%;
  table-layout: fixed;
}

.feedback .tbl-header {
  background-color: rgba(255, 255, 255, 0.3);
}

.feedback .tbl-content {
  height: 300px;
  overflow-x: auto;
  margin-top: 0px;
  border: 1px solid rgba(255, 255, 255, 0.3);
}

.feedback th {
  padding: 20px 15px;
  text-align: left;
  font-weight: 500;
  font-size: 12px;
  text-transform: uppercase;
}

.feedback td {
  padding: 15px;
  text-align: left;
  vertical-align: middle;
  font-weight: 300;
  font-size: 12px;
  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
}

.feedback ::-webkit-scrollbar {
  width: 6px;
}

.feedback ::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.feedback ::-webkit-scrollbar-thumb {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.reflect {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.reflect .accordion {
  text-align: center;
}

.reflect h2 {
  text-align: center;
  color: #4053e4;
}

.reflect h3 {
  margin-bottom: 0px;
}

.reflect .accordion {
  background-color: white;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.reflect .material-icons {
  font-size: 56px;
  cursor: pointer;
  color: black;
}

.reflect .material-icons:hover {
  background-color: #4053e4;
  border-radius: 90px;
  color: white;
}

.reflect .material-icons:not(:hover) {
  background-color: none;
  border-radius: 90px;
  color: black;
}

.reflect .active .material-icons {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}

.reflect .panel {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

.reflect .read-more-state {
  display: none;
}

.reflect .read-more-target {
  opacity: 0;
  max-height: 0;
  font-size: 0;
  -webkit-transition: 0.25s ease;
  transition: 0.25s ease;
}

.reflect .read-more-state:checked ~ .read-more-wrap .read-more-target {
  opacity: 1;
  font-size: inherit;
  max-height: 999em;
}

.reflect .read-more-state ~ .read-more-trigger:before {
  content: "Show more";
}

.reflect .read-more-state:checked ~ .read-more-trigger:before {
  content: "Show less";
}
/* ... */

